--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Firebase Dependancies
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.14.0+5
+  firebase_analytics: ^5.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
