--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: shop_mobile_business
+name: shop_mobile_customer
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  sliding_up_panel: ^1.0.2
+  flutter_slidable: ^0.5.7
 
   # Firebase Dependancies
   firebase_core: ^0.4.0+9
