--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>699599394905-t9ejtaa6ddmbij2d9f6mofb4vjl4467j.apps.googleusercontent.com</string>
+	<string>699599394905-qdcrm276c6h6t19q4dveiijm7fj888n5.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.699599394905-t9ejtaa6ddmbij2d9f6mofb4vjl4467j</string>
+	<string>com.googleusercontent.apps.699599394905-qdcrm276c6h6t19q4dveiijm7fj888n5</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>699599394905-de62ppsl96t98matj9j8u0fu6u7gi7q5.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.teamsydney.customer</string>
+	<string>com.teamsydney.shopMobileCustomer</string>
 	<key>PROJECT_ID</key>
 	<string>shop-team-sydney</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:699599394905:ios:d9e7e9e0df345750167948</string>
+	<string>1:699599394905:ios:195d5b45b2e577de167948</string>
 </dict>
 </plist>
