--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   sliding_up_panel: ^1.0.2
   flutter_slidable: ^0.5.7
   google_sign_in: ^4.5.9
-  stripe_payment: ^1.0.9
+  http: ^0.12.2
+  qr_flutter: ^3.2.0
 
   # Firebase Dependancies
   firebase_core: ^0.4.0+9
