First Commit to Redesign

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.teamsydney.shop_mobile_customer">
-    <!-- io.flutter.app.FlutterApplication is an android.app.Application that
-         calls FlutterMain.startInitialization(this); in its onCreate method.
-         In most cases you can leave this as-is, but you if you want to provide
-         additional functionality it is fine to subclass or reimplement
-         FlutterApplication and put your custom class here. -->
-    <application
-        android:name="io.flutter.app.FlutterApplication"
-        android:label="Curb Shop"
+    package="online.curbshop.customer.curbshop_mobile_customer">
+   <application
+        android:label="curbshop_mobile_customer"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
