--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: shop_mobile_customer
+name: curbshop_mobile_customer
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -24,20 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  sliding_up_panel: ^1.0.2
-  flutter_slidable: ^0.5.7
-  google_sign_in: ^4.5.9
-  http: ^0.12.2
-  qr_flutter: ^3.2.0
-
-  # Firebase Dependancies
-  firebase_core: ^0.4.0+9
-  firebase_auth: ^0.14.0+5
-  firebase_analytics: ^5.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -53,19 +43,6 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
-  assets:
-    - assets/images/
-  fonts:
-    - family: Quicksand
-      fonts:
-        - asset: assets/fonts/Quicksand-Regular.ttf
-        - asset: assets/fonts/Quicksand-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/Quicksand-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Quicksand-Bold.ttf
-          weight: 700
 
   # To add assets to your application, add an assets section, like this:
   # assets:
