--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #Formatting
+  intl: ^0.17.0
+
   # Style & Design
   sliding_up_panel: ^1.0.2
   google_fonts: ^2.0.0
