--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,13 @@ dependencies:
   # Style & Design
   sliding_up_panel: ^1.0.2
   google_fonts: ^2.0.0
+  flutter_icons: ^1.1.0
 
   # Firebase
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.14.0+5
+  google_sign_in: ^5.0.1
 
   #Backend
 
